# tensordock-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
src/: config.rs  error.rs  lib.rs
src/endpoints/: instances.rs
src/structs/: global_resources.rs  gpu_instances.rs  instance.rs  instances_response.rs  location.rs  mod.rs  resources.rs  specs.rs  storage_option.rs
src/util/: defaults.rs
