[package]
name = "tensordock-rs"
description = "Wrapper for the TensorDock Marketplace API"
repository = "https://github.com/tensordock/tensordock-rs"
homepage = "https://github.com/tensordock/tensordock-rs"
license = "MIT"
readme = "README.md"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0"
